<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#333131"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/item_name"
        android:inputType="text"
        android:textSize="19sp"
        android:textColor="#fff"
        android:textColorHint="#D5FFFFFF"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/editTextItemSupplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/supplier_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textSize="19sp"
        android:textColor="#fff"
        android:textColorHint="#D5FFFFFF"/>
    <EditText
        android:id="@+id/editTextItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:textSize="19sp"
        android:textColor="#fff"
        android:textColorHint="#D5FFFFFF"/>

    <EditText
        android:id="@+id/editTextItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/available_quantity"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:textSize="19sp"
        android:textColor="#fff"
        android:textColorHint="#D5FFFFFF"/>

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:textColor="#fff"
        android:textSize="23sp"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="16dp" />
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/imageViewAdd"
        android:src="@drawable/nur"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>